---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/vacuum.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  VACUUM
    VACUUM_KW "vacuum"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  VACUUM
    VACUUM_KW "VACUUM"
    WHITESPACE " "
    VACUUM_OPTION_LIST
      L_PAREN "("
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          VERBOSE_KW "VERBOSE"
      COMMA ","
      WHITESPACE " "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          ANALYZE_KW "ANALYZE"
      R_PAREN ")"
    WHITESPACE " "
    TABLE_AND_COLUMNS_LIST
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "onek"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  VACUUM
    VACUUM_KW "VACUUM"
    WHITESPACE " "
    VACUUM_OPTION_LIST
      L_PAREN "("
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          FULL_KW "full"
      COMMA ","
      WHITESPACE " \n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          FULL_KW "full"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE " \n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          FULL_KW "full"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE " \n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          ANALYZE_KW "analyze"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          ANALYZE_KW "analyze"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          ANALYZE_KW "analyze"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "disable_page_skipping"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "disable_page_skipping"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "disable_page_skipping"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_locked"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_locked"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_locked"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "index_cleanup"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          VACUUM_OPTION_VALUE_NAME
            IDENT "auto"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "index_cleanup"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            ON_KW "on"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "index_cleanup"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            OFF_KW "off"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "process_main"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "process_main"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "process_main"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          TRUNCATE_KW "truncate"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          TRUNCATE_KW "truncate"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          TRUNCATE_KW "truncate"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          PARALLEL_KW "parallel"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            INT_NUMBER "100"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_database_stats"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_database_stats"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "skip_database_stats"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "only_database_stats"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "only_database_stats"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            TRUE_KW "true"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "only_database_stats"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            FALSE_KW "false"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "buffer_usage_limit"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            INT_NUMBER "10"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          IDENT "buffer_usage_limit"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            STRING "'10 TB'"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          FULL_KW "full"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          NO_KW "no"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          VERBOSE_KW "verbose"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          LITERAL
            STRING "'off'"
      COMMA ","
      WHITESPACE "\n    "
      VACUUM_OPTION
        VACUUM_OPTION_NAME
          ANALYZE_KW "analyze"
        WHITESPACE " "
        VACUUM_OPTION_VALUE
          YES_KW "yes"
      WHITESPACE "\n"
      R_PAREN ")"
    WHITESPACE " "
    TABLE_AND_COLUMNS_LIST
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "t1"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- pre_pg_9_syntax"
  WHITESPACE "\n"
  VACUUM
    VACUUM_KW "vacuum"
    WHITESPACE " "
    FULL_KW "full"
    WHITESPACE " "
    FREEZE_KW "freeze"
    WHITESPACE " "
    VERBOSE_KW "verbose"
    WHITESPACE " "
    ANALYZE_KW "analyze"
    WHITESPACE " "
    TABLE_AND_COLUMNS_LIST
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "foo"
      COMMA ","
      WHITESPACE " "
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "bar"
        COLUMN_REF_LIST
          L_PAREN "("
          COLUMN_REF
            NAME_REF
              IDENT "a"
          COMMA ","
          WHITESPACE " "
          COLUMN_REF
            NAME_REF
              IDENT "b"
          R_PAREN ")"
      COMMA ","
      WHITESPACE " "
      TABLE_AND_COLUMNS
        TABLE_RELATION_NAME
          TABLE_NAME_REF
            PATH_REF
              PATH_SEGMENT_REF
                IDENT "c"
    SEMICOLON ";"
  WHITESPACE "\n\n"
